feat: enhance security configuration and user entity